--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,4 +1,4 @@
-project_name: selefra-provider-{{provider-name}}
+project_name: selefra-provider-consul
 builds:
   - env: [CGO_ENABLED=0]
     goos:
